--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>个人简历</title>
+    <title>Eleven Blog</title>
     <!--引用FullPage-->
     <link rel="stylesheet" type="text/css" href="sources/css/jquery.fullPage.css">
     <!--引用自己写的样式-->
@@ -44,8 +44,8 @@
             <div></div>
         </div>
     <ul class="clearfix">
-        <li><a href="#page1">回到首页</a></li>
-        <li><a href="#page2">关于自己</a></li>
+        <li><a href="#page1">Home</a></li>
+        <li><a href="blog.html">Blogs</a></li>
         <li><a href="#page3">部分作品</a></li>
         <li><a href="#page4">个人陈述</a></li>
     </ul>
@@ -78,67 +78,70 @@
                 </video>
             </div>
         </div>
+<!--        <div class="section">-->
+<!--            &lt;!&ndash;第二页&ndash;&gt;-->
+<!--            <div class="bg01">-->
+<!--                &lt;!&ndash;头像&ndash;&gt;-->
+<!--                <div class="image"><img src="img/5.jpg"></div>-->
+<!--                <div class="face">-->
+<!--                    <i></i>-->
+<!--                    <div><img src="img/myself.jpg"></div>-->
+<!--                </div>-->
+<!--                <div class="note">-->
+<!--                    &lt;!&ndash;右侧信息栏&ndash;&gt;-->
+<!--                    <h4>个人信息</h4>-->
+<!--                    <div id="rotate">-->
+<!--                        <a href="javascript:void(0)">姓名：史佳易</a>-->
+<!--                        <a href="javascript:void(0)">出生年月：1996/08/13</a>-->
+<!--                        <a href="javascript:void(0)">身高：177cm</a>-->
+<!--                        <a href="javascript:void(0)">联系电话：18581846897</a>-->
+<!--                        <a href="javascript:void(0)">政治面貌：共青团团员</a>-->
+<!--                        <a href="javascript:void(0)">籍贯：四川成都</a>-->
+<!--                        <a href="javascript:void(0)">本科专业：电子科学与技术</a>-->
+<!--                        <a href="javascript:void(0)">本科院校：天津理工大学</a>-->
+<!--                        <a href="javascript:void(0)">民族：汉</a>-->
+<!--                        <a href="javascript:void(0)">入学时间：2014/09</a>-->
+<!--                    </div>-->
+<!--                        <h4>获奖经历</h4>-->
+<!--                        <p>2015年获新生奖学金。</p>-->
+<!--                        <p>2014年“电信才艺杯”代表班级表演舞蹈获得冠军。</p>-->
+<!--                         <p>2014-2015年下半学期获二等优秀学生奖学金。</p>-->
+<!--                        <p>2015年学院趣味运动会4X100接力亚军。</p>-->
+<!--                        <p>2016年7月蓝桥杯所在小组获得全校冠军及市内二等奖。</p>-->
+<!--                        <p>2016年全国大学生建模大赛天津市三等奖。</p>-->
+<!--                     <p>2016年天津市电脑鼠大赛二等奖。</p>-->
+<!--                        <p>2016年电信学院“艾英语”电影电视配音大赛。</p>-->
+<!--                        <p>2017年获一等优秀学生奖学金。</p>-->
+<!--                        <h4>兴趣爱好</h4>-->
+<!--                        <ul class="hobby">-->
+<!--                           <li>-->
+<!--                               <i class="cir"></i>-->
+<!--                               <i class="line"></i><div>-->
+<!--                               <span>篮球，大学期间在班级担任队长并3年进入半决赛，班级联赛场均15分</span>-->
+<!--                           </div>-->
+<!--                           </li>-->
+<!--                            <li>-->
+<!--                                <div>-->
+<!--                                <span>舞蹈Breaking</span>-->
+<!--                            </div>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                              <div>-->
+<!--                                <span>英语电影及英语口语</span>-->
+<!--                            </div>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <i class="cir"></i>-->
+<!--                                <i class="line"></i><div>-->
+<!--                                <span>摄影与外文原著</span>-->
+<!--                            </div>-->
+<!--                            </li>-->
+<!--                         </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="section">
-            <!--第二页-->
-            <div class="bg01">
-                <!--头像-->
-                <div class="image"><img src="img/5.jpg"></div>
-                <div class="face">
-                    <i></i>
-                    <div><img src="img/myself.jpg"></div>
-                </div>
-                <div class="note">
-                    <!--右侧信息栏-->
-                    <h4>个人信息</h4>
-                    <div id="rotate">
-                        <a href="javascript:void(0)">姓名：史佳易</a>
-                        <a href="javascript:void(0)">出生年月：1996/08/13</a>
-                        <a href="javascript:void(0)">身高：177cm</a>
-                        <a href="javascript:void(0)">联系电话：18581846897</a>
-                        <a href="javascript:void(0)">政治面貌：共青团团员</a>
-                        <a href="javascript:void(0)">籍贯：四川成都</a>
-                        <a href="javascript:void(0)">本科专业：电子科学与技术</a>
-                        <a href="javascript:void(0)">本科院校：天津理工大学</a>
-                        <a href="javascript:void(0)">民族：汉</a>
-                        <a href="javascript:void(0)">入学时间：2014/09</a>
-                    </div>
-                        <h4>获奖经历</h4>
-                        <p>2015年获新生奖学金。</p>
-                        <p>2014年“电信才艺杯”代表班级表演舞蹈获得冠军。</p>
-                         <p>2014-2015年下半学期获二等优秀学生奖学金。</p>
-                        <p>2015年学院趣味运动会4X100接力亚军。</p>
-                        <p>2016年7月蓝桥杯所在小组获得全校冠军及市内二等奖。</p>
-                        <p>2016年全国大学生建模大赛天津市三等奖。</p>
-                     <p>2016年天津市电脑鼠大赛二等奖。</p>
-                        <p>2016年电信学院“艾英语”电影电视配音大赛。</p>
-                        <p>2017年获一等优秀学生奖学金。</p>
-                        <h4>兴趣爱好</h4>
-                        <ul class="hobby">
-                           <li>
-                               <i class="cir"></i>
-                               <i class="line"></i><div>
-                               <span>篮球，大学期间在班级担任队长并3年进入半决赛，班级联赛场均15分</span>
-                           </div>
-                           </li>
-                            <li>
-                                <div>
-                                <span>舞蹈Breaking</span>
-                            </div>
-                            </li>
-                            <li>
-                              <div>
-                                <span>英语电影及英语口语</span>
-                            </div>
-                            </li>
-                            <li>
-                                <i class="cir"></i>
-                                <i class="line"></i><div>
-                                <span>摄影与外文原著</span>
-                            </div>
-                            </li>
-                         </ul>
-                </div>
-            </div>
+            <a href="blog.html"></a>
         </div>
         <div class="section">
             <!--第三页-->
@@ -214,14 +217,14 @@
                                 <li>
                                 </li>
                                 <li>
-                                    <div>
-                                        <h2>尊敬的老师或教授：</h2>
-                                        <h1>您好！</h1> 
-                                        <p>我是史佳易，因慕名贵校数据科学与计算机学院计算机科学与技术专业想进入贵校学习。</p>
-                                       <p> 我对自己进行了仔细的思考和评估，本科期间我一直严格要求自己，不断的追求进步，并连年获得综合奖学金（3次）。在专业和综合方面的学习上我从来没有放松过对自己的要求。 我一次性通过国家四六级考试CET-4（550）CET-6（469），具备良好的听说读写能力，可以进行日常的沟通。到目前为止我的平均绩点为3.6，排名位于年级前10左右，虽然最喜欢的专业并不是本专业，但我并没因此就忽视本科的学习，大一时高数取得全班第一的成绩并以综合成绩年级前10获得新生奖学金，大二多门主要学科获得优良成绩，在课余时根据自己的兴趣爱好选修当代国际政治热点问题、英语翻译、摄影入门技巧等课程，其中当代国际政治热点问题结课论文被老师作为范文全班展示，其余选修课均获得满绩点的成绩，大三来担任学生助理带领大一新生，作为学生助理的我十分明白只有以身作则才能给学弟学妹们树立一个好的榜样，因此无论再忙也没有对自己的学业松懈，在选修三门课的同时两门学科主要专业课（电磁场与电磁波、半导体物理）最终取得接近满绩点的成绩，获得任课老师的认同与表扬。如今大三下学期刚结束，对于计算机专业的浓厚兴趣使我决定考取研究生修读此专业。在大一时接触到了互联网上前端技术，此后爱上了计算机与互联网，一开始通过自己不断地网上自学，一学期后已经能独自一人做出一个大型购物网站并且可以驾驭大多数页面的开发，进入大三后接触到算法，由最开始的最简单算法入门仿造2048做了一个完全一模一样的游戏（页面前端由H5完成，算法由JS写成，支持手机PC平板），其后对计算机和互联网的喜爱日益深厚，这巨大兴趣驱使我想考入贵校计算机专业进行深造。</p>
-                                        <p>非常感谢您能在百忙之中抽出时间阅信。冒昧致信，恳请海涵！期待能够加入您的科研团队。</p> 
-                                       <p>祝您身体健康，工作顺利。</p>
-                                    </div>
+<!--                                    <div>-->
+<!--                                        <h2>尊敬的老师或教授：</h2>-->
+<!--                                        <h1>您好！</h1> -->
+<!--                                        <p>我是史佳易，因慕名贵校数据科学与计算机学院计算机科学与技术专业想进入贵校学习。</p>-->
+<!--                                       <p> 我对自己进行了仔细的思考和评估，本科期间我一直严格要求自己，不断的追求进步，并连年获得综合奖学金（3次）。在专业和综合方面的学习上我从来没有放松过对自己的要求。 我一次性通过国家四六级考试CET-4（550）CET-6（469），具备良好的听说读写能力，可以进行日常的沟通。到目前为止我的平均绩点为3.6，排名位于年级前10左右，虽然最喜欢的专业并不是本专业，但我并没因此就忽视本科的学习，大一时高数取得全班第一的成绩并以综合成绩年级前10获得新生奖学金，大二多门主要学科获得优良成绩，在课余时根据自己的兴趣爱好选修当代国际政治热点问题、英语翻译、摄影入门技巧等课程，其中当代国际政治热点问题结课论文被老师作为范文全班展示，其余选修课均获得满绩点的成绩，大三来担任学生助理带领大一新生，作为学生助理的我十分明白只有以身作则才能给学弟学妹们树立一个好的榜样，因此无论再忙也没有对自己的学业松懈，在选修三门课的同时两门学科主要专业课（电磁场与电磁波、半导体物理）最终取得接近满绩点的成绩，获得任课老师的认同与表扬。如今大三下学期刚结束，对于计算机专业的浓厚兴趣使我决定考取研究生修读此专业。在大一时接触到了互联网上前端技术，此后爱上了计算机与互联网，一开始通过自己不断地网上自学，一学期后已经能独自一人做出一个大型购物网站并且可以驾驭大多数页面的开发，进入大三后接触到算法，由最开始的最简单算法入门仿造2048做了一个完全一模一样的游戏（页面前端由H5完成，算法由JS写成，支持手机PC平板），其后对计算机和互联网的喜爱日益深厚，这巨大兴趣驱使我想考入贵校计算机专业进行深造。</p>-->
+<!--                                        <p>非常感谢您能在百忙之中抽出时间阅信。冒昧致信，恳请海涵！期待能够加入您的科研团队。</p> -->
+<!--                                       <p>祝您身体健康，工作顺利。</p>-->
+<!--                                    </div>-->
                                 </li>
                                 <li class="title">
                                     <b>听</b>
